vdoc: fix horizontal scrollbar (fixes #5247)

--- a/cmd/tools/vdoc-resources/doc.css
+++ b/cmd/tools/vdoc-resources/doc.css
@@ -106,6 +106,7 @@ body {
 }
 *::-webkit-scrollbar {
 	width: 8px;
+	height: 8px;
 }
 *::-webkit-scrollbar-track {
 	background: transparent;
@@ -407,9 +408,11 @@ code[class*="language-"] {
   border-radius: 0.25rem;
   overflow-x: auto;
 }
+code[class*="language-"] {
+	padding: 1rem;
+}
 pre[class*="language-"] {
   overflow: auto;
-  padding: 1rem;
   margin: 0;
 }
 .namespace {
